--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <title>Part 3 JoJo Stands</title>
   </head>
   <body>
-    Hello World
+  <h1><b>Part 3 JoJo Syands<b></h1>
+    <p>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" from part 3</p>
   </body>
 </html>
