--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"
-    <title> JoJo Part 3 stands
+    <title> JoJo Part 3 stands </title>
   </head>
   <body>
-  <h1><b style="font-size:1vw">Part 2 JoJo Stands<b></h1>
+  <h1><b style="font-size:3vw">Part 2 JoJo Stands<b></h1>
     <p>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" from part 3</p>
-    <li>Star Platnium</li>
-    <li>Star Platnium</li>
-    <li>Star Platnium</li>
-    <li>Star Platnium</li>
-    <li>Star Platnium</li>
+    <ul>
+      <li>Part 3 stands
+          <ul>
+              <li style="font-size:1vw">Star Platnium</li>
+              <li style="font-size:1vw">Silver Chariot</li>
+              <li style="font-size:1vw">magician's red</li>
+              <li style="font-size:1vw">hierophant green</li>
+              <li style="font-size:1vw">hermit purple</li>
+              <li style="font-size:1vw">The World</li>
+    </ul>
+
+
   </body>
 </html>
