--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"
-    <title> JoJo Part 3 stands </title>
+    <title>JoJo Bizzare Adventure: Stands</title>
   </head>
   <body>
   <h1><b style="font-size:3vw">Part 2 JoJo Stands<b></h1>
-    <p>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" from part 3</p>
+    <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" from part 3</h2>
   <ul>
-      <li>Part 3 stands
+      <li style="font-size:3vw> Part 3 stands
           <ul>
-              <li style="font-size:1vw">Star Platnium</li>
-              <li style="font-size:1vw">Silver Chariot</li>
-              <li style="font-size:1vw">magician's red</li>
-              <li style="font-size:1vw">hierophant green</li>
-              <li style="font-size:1vw">hermit purple</li>
+              <li style="font-size:1.5vw">Star Platnium</li>
+              <li style="font-size:1.5vw">Silver Chariot</li>
+              <li style="font-size:1.5vw">magician's red</li>
+              <li style="font-size:1.5vw">hierophant green</li>
+              <li style="font-size:1.5vw">hermit purple</li>
               <li style="font-size:1vw">The World</li>
           </ul>
-      </li>
+      </li >
 
 
   </body>
