--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
   <h1><b style="font-size:3vw">Part 2 JoJo Stands<b></h1>
-    <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" from part 3</h2>
+    <h3>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure"</h3>
   <ul>
-      <li style="font-size:3vw> Part 3 stands
+      <li> Part 3 stands
           <ul>
               <li style="font-size:1.5vw">Star Platnium</li>
               <li style="font-size:1.5vw">Silver Chariot</li>
