--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"
     <title>JoJo Bizzare Adventure: Stands</title>
+
   </head>
   <body>
   <h1><b style="font-size:3vw">Part 2 JoJo Stands<b></h1>
-    <h3>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure"</h3>
+    <h4>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure"</h4>
   <ul>
       <li> Part 3 stands
           <ul>
-              <li style="font-size:1.5vw">Star Platnium</li>
-              <li style="font-size:1.5vw">Silver Chariot</li>
-              <li style="font-size:1.5vw">magician's red</li>
-              <li style="font-size:1.5vw">hierophant green</li>
-              <li style="font-size:1.5vw">hermit purple</li>
-              <li style="font-size:1vw">The World</li>
+              <li style="font-size:1.5vw"><a href="childpages\StarPlatnium.html" target="_blank"> Star Platnium</li>
+              <li style="font-size:1.5vw"><a href="childpages\SilverChariot.html" target="_blank">Silver Chariot</li>
+              <li style="font-size:1.5vw"><a href="childpages\magiciansred.html" target="_blank">magician's red</li>
+              <li style="font-size:1.5vw"><a href="childpages\hierophantgreen.html" target="_blank">hierophant green</li>
+              <li style="font-size:1.5vw"><a href="childpages\HermitPurple.html" target="_blank">hermit purple</li>
+              <li style="font-size:1.5vw"><a href="childpages\TheWorld.html" target="_blank">The World</li>
           </ul>
       </li >
 
