--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <h1><b style="font-size:4vw">Part 2 JoJo Stands<b></h1>
-    <h2><b style="font-size:1.3vw">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
+    <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
   <ul>
       <li> Part 3 stands
           <ul>
