--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   </head>
   <body>
-  <h2><b style="font-size:4vw">Part 2 JoJo Stands<b></h2>
+  <h2>Part 2 JoJo Stands</h2>
     <h1>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h1>
   <ul>
       <li> Part 3 stands
