--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1>Part 2 JoJo Stands</h1>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
   <ul>
-      <li> Part 3 stands
+      <li style="font-size:2vw"> Part 3 stands
           <ul>
-              <li style="font-size:1.5vw"><a href="childpages\StarPlatnium.html" target="_blank"> Star Platnium</li>
+              <li style="font-size:1.5vw"><a href="childpages\StarPlatnium.html" target="_blank">Star Platnium</li>
               <li style="font-size:1.5vw"><a href="childpages\SilverChariot.html" target="_blank">Silver Chariot</li>
               <li style="font-size:1.5vw"><a href="childpages\magiciansred.html" target="_blank">magician's red</li>
               <li style="font-size:1.5vw"><a href="childpages\hierophantgreen.html" target="_blank">hierophant green</li>
