--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"
     <title>JoJo Bizzare Adventure: Stands</title>
-
   </head>
   <body>
   <h1>Part 2 JoJo Stands</h1>
@@ -12,12 +11,23 @@
   <ul>
       <li style="font-size:2vw"> Part 3 stands
           <ul>
-              <li style="font-size:1.5vw"><a href="childpages\StarPlatnium.html" target="_blank">Star Platnium</li>
-              <li style="font-size:1.5vw"><a href="childpages\SilverChariot.html" target="_blank">Silver Chariot</li>
-              <li style="font-size:1.5vw"><a href="childpages\magiciansred.html" target="_blank">magician's red</li>
-              <li style="font-size:1.5vw"><a href="childpages\hierophantgreen.html" target="_blank">hierophant green</li>
-              <li style="font-size:1.5vw"><a href="childpages\HermitPurple.html" target="_blank">hermit purple</li>
-              <li style="font-size:1.5vw"><a href="childpages\TheWorld.html" target="_blank">The World</li>
+              <li style="font-size:1.5vw"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
+              <li style="font-size:1.5vw"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
+              <li style="font-size:1.5vw"><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
+              <li style="font-size:1.5vw"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
+              <li style="font-size:1.5vw"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
+              <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
+          </ul>
+      </li >
+      
+      <li style="font-size:2vw"> Part 4 stands
+          <ul>
+              <li style="font-size:1.5vw"><a href="Part4stands\CrazyDiamond.html" target="_blank">Crazy Diamond</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\StarPlatnium(Part2).html" target="_blank">Star Platnium</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\TheHand.html" target="_blank">The Hand</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\Echo.html" target="_blank">Echo</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\heavensdoor.html" target="_blank">Heaven's Door</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
           </ul>
       </li >
 
