--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <body>
   <h1>Part 2 JoJo Stands</h1>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
+
+    <style>
+   div {border: thin dotted red;}
+   *{
+     box-sizing: border-box;
+   }
+   .header {
+     border:1px solid red;
+   }
+   .menu {
+     width: 25%;
+     float: left;
+     padding: 15px;
+     border: 1px solid red;
+   }
+   .main {
+     width: 75%;
+     float: left;
+     padding: 15px;
+     border: 1px solid red;
+   }
+ </style>
+
   <ul>
       <li style="font-size:2vw"> Part 3 stands
           <ul>
@@ -19,7 +42,8 @@
               <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
           </ul>
       </li >
-      
+
+  <ul>
       <li style="font-size:2vw"> Part 4 stands
           <ul>
               <li style="font-size:1.5vw"><a href="Part4stands\CrazyDiamond.html" target="_blank">Crazy Diamond</li>
