--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>JoJo Bizzare Adventure: Stands</title>
   </head>
   <body>
-  <h1>Part 2 JoJo Stands</h1>
+  <h1 style="font-family:verdana">Part 2 JoJo Stands</h1>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
+    <style>
+    p {
+      border: 2px solid black;
+    }
+    <style>
   <ul>
       <li style="font-size:2vw"> Part 3 stands
           <ul>
@@ -31,6 +36,6 @@
               <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
           </ul>
       </li>
-      
+
   </body>
 </html>
