--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+    h1 {
+      border:2px solid powderblue;
+      padding: 30px;
+    }
+    <style>
     <title>JoJo Bizzare Adventure: Stands</title>
   </head>
   <body>
   <h1 style="font-family:verdana">Part 2 JoJo Stands</h1>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
-    <style>
-    p {
-      border: 2px solid black;
-    }
-    <style>
   <ul>
       <li style="font-size:2vw"> Part 3 stands
           <ul>
