--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       border:2px solid powderblue;
       padding: 30px;
     }
-    <style>
+    </style>
     <title>JoJo Bizzare Adventure: Stands</title>
   </head>
   <body>
