--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <style>
-    h1 {
-      border:2px solid powderblue;
-      padding: 30px;
-    }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
     </style>
     <title>JoJo Bizzare Adventure: Stands</title>
   </head>
