--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
     <title>JoJo Bizzare Adventure: Stands</title>
   </head>
   <body>
+    <header>
   <h1 style="font-family:verdana">Part 2 JoJo Stands</h1>
+</header>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
   <ul>
       <li style="font-size:2vw"> Part 3 stands
