--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   </head>
   <body>
     <header>
-  <h1 style="font-family:verdana">Part 2 JoJo Stands</h1>
+  <h1 style="font-family:verdana">JoJo Stands</h1>
 </header>
-    <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them : )</h2>
+    <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
   <ul>
       <li style="font-size:2vw"> Part 3 stands
           <ul>
@@ -87,7 +87,8 @@
               <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
           </ul>
       </li>
-
+   </body>
+   <body>
 
   <ul>
       <li style="font-size:2vw"> Part 4 stands
