--- a/Part4stands/StarPlatnium(Part2).html
+++ b/Part4stands/StarPlatnium(Part2).html
@@ -5,6 +5,6 @@
     <title>Child Page Template</title>
   </head>
   <body>
-    This is only a template
+    Star Platnium (Part 4)
   </body>
 </html>
