--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
   <h1 style="font-family:verdana">JoJo Stands</h1>
 </header>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
+    <ul>
+        <li style="font-size:2vw"> Part 3 stands
+            <ul>
+                <li style="font-size:1.5vw"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
+                <li style="font-size:1.5vw"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
+                <li style="font-size:1.5vw"><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
+                <li style="font-size:1.5vw"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
+                <li style="font-size:1.5vw"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
+                <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
+            </ul>
+        </li>
+
+
+
+
   <ul>
       <li style="font-size:2vw"> Part 4 stands
           <ul>
