--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </header>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <ul>
-        <li style="font-size:2vw"> Part 3 stands
+        <p style="font-size:2vw"> Part 3 stands </p>
             <ul>
                 <li style="font-size:1.5vw"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
                 <li style="font-size:1.5vw"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
@@ -92,7 +92,7 @@
 
 
   <ul>
-      <li style="font-size:2vw"> Part 4 stands
+      <p style="font-size:2vw"> Part 4 stands</p>
           <ul>
               <li style="font-size:1.5vw"><a href="Part4stands\CrazyDiamond.html" target="_blank">Crazy Diamond</li>
               <li style="font-size:1.5vw"><a href="Part4stands\StarPlatnium(Part2).html" target="_blank">Star Platnium</li>
