--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         height: auto;
       }
     }
+    body {
+      background-image: url("c15.png");
+    }
     </style>
     </head>
     <body>
