--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       color: white;
     }
 
-    /* Create two columns/boxes that floats next to each other */
+
     nav {
       float: left;
       width: 30%;
-      height: 300px; /* only for demonstration, should be removed */
+      height: 300px;
       background: #ccc;
       padding: 20px;
     }
 
-    /* Style the list inside the menu */
+
     nav ul {
       list-style-type: none;
       padding: 0;
@@ -43,14 +43,14 @@
       height: 300px; /* only for demonstration, should be removed */
     }
 
-    /* Clear floats after the columns */
+
     section::after {
       content: "";
       display: table;
       clear: both;
     }
 
-    /* Style the footer */
+
     footer {
       background-color: #777;
       padding: 10px;
@@ -58,16 +58,18 @@
       color: white;
     }
 
-    /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+
     @media (max-width: 600px) {
       nav, article {
         width: 100%;
         height: auto;
       }
     }
+
     body {
       background-image: url("c15.png");
     }
+
     </style>
     </head>
     <body>
@@ -88,16 +90,18 @@
                 <li style="font-size:1.5vw"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
                 <li style="font-size:1.5vw"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
                 <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
-           </ul>
-   <ul>
-        <p style="font-size:2vw"> Part 4 stands</p>
-           <ul>
-               <li style="font-size:1.5vw"><a href="Part4stands\CrazyDiamond.html" target="_blank">Crazy Diamond</li>
-               <li style="font-size:1.5vw"><a href="Part4stands\StarPlatnium(Part2).html" target="_blank">Star Platnium</li>
-               <li style="font-size:1.5vw"><a href="Part4stands\TheHand.html" target="_blank">The Hand</li>
-               <li style="font-size:1.5vw"><a href="Part4stands\Echo.html" target="_blank">Echo</li>
-               <li style="font-size:1.5vw"><a href="Part4stands\heavensdoor.html" target="_blank">Heaven's Door</li>
-               <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
-           </ul>
+
+  <ul>
+      <p style="font-size:2vw"> Part 4 Stands </p>
+          <ul>
+              <li style="font-size:1.5vw"><a href="Part4stands\CrazyDiamond.html" target="_blank">Crazy Diamond</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\StarPlatnium(Part2).html" target="_blank">Star Platnium</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\TheHand.html" target="_blank">The Hand</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\Echo.html" target="_blank">Echo</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\heavensdoor.html" target="_blank">Heaven's Door</li>
+              <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
+         </ul>
+     </li>
+
   </body>
 </html>
