--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     }
 
     body {
-      background-image: url("c15.png");
+      background-image: url("Images/c15.png");
     }
 
     </style>
@@ -90,6 +90,8 @@
                 <li style="font-size:1.5vw"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
                 <li style="font-size:1.5vw"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
                 <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
+           </ul>
+         </li>
 
   <ul>
       <p style="font-size:2vw"> Part 4 Stands </p>
@@ -100,8 +102,8 @@
               <li style="font-size:1.5vw"><a href="Part4stands\Echo.html" target="_blank">Echo</li>
               <li style="font-size:1.5vw"><a href="Part4stands\heavensdoor.html" target="_blank">Heaven's Door</li>
               <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
-         </ul>
-     </li>
+          </ul>
+      </li>
 
   </body>
 </html>
