--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    /* Style the header */
     header {
       background-color: #666;
       padding: 30px;
@@ -40,7 +39,6 @@
       padding: 20px;
       width: 70%;
       background-color: #f1f1f1;
-      height: 300px; /* only for demonstration, should be removed */
     }
 
 
@@ -81,6 +79,7 @@
   <h1 style="font-family:verdana">JoJo Stands</h1>
 </header>
     <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
+    <artical>
     <ul>
         <p style="font-size:2vw"> Part 3 stands </p>
             <ul>
@@ -104,6 +103,6 @@
               <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
           </ul>
       </li>
-
+   </artical>
   </body>
 </html>
