--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
     body {
       background-image: url("Images/c15.png");
+      background-repeat: no-repeat;
+      background-position: right top;
+      background-attachment: fixed;
     }
 
     </style>
@@ -78,31 +81,17 @@
     <header>
   <h1 style="font-family:verdana">JoJo Stands</h1>
 </header>
-    <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
+    <h2 style="color:255, 255, 255">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
     <ul>
-        <p style="font-size:2vw"> Part 3 stands </p>
+        <p style="font-size:2vw" style="color:255, 255, 255"> Part 3 stands </p>
             <ul>
-                <li style="font-size:1.5vw"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
-                <li style="font-size:1.5vw"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
-                <li style="font-size:1.5vw"><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
-                <li style="font-size:1.5vw"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
-                <li style="font-size:1.5vw"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
-                <li style="font-size:1.5vw"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
+                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
+                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
+                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
+                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
+                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
+                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
            </ul>
          </li>
-
-  <ul>
-      <p style="font-size:2vw"> Part 4 Stands </p>
-          <ul>
-              <li style="font-size:1.5vw"><a href="Part4stands\CrazyDiamond.html" target="_blank">Crazy Diamond</li>
-              <li style="font-size:1.5vw"><a href="Part4stands\StarPlatnium(Part2).html" target="_blank">Star Platnium</li>
-              <li style="font-size:1.5vw"><a href="Part4stands\TheHand.html" target="_blank">The Hand</li>
-              <li style="font-size:1.5vw"><a href="Part4stands\Echo.html" target="_blank">Echo</li>
-              <li style="font-size:1.5vw"><a href="Part4stands\heavensdoor.html" target="_blank">Heaven's Door</li>
-              <li style="font-size:1.5vw"><a href="Part4stands\KillerQueen.html" target="_blank">Killer Queen</li>
-          </ul>
-      </li>
-   </artical>
-  </body>
-</html>
+    </artical>
