--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
 
     body {
       background-image: url("Images/c15.png");
-      background-repeat: no-repeat;
-      background-position: right top;
-      background-attachment: fixed;
+      background-repeat: repeat-x;
     }
 
     </style>
@@ -84,7 +82,7 @@
     <h2 style="color:255, 255, 255">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
     <ul>
-        <p style="font-size:2vw" style="color:255, 255, 255"> Part 3 stands </p>
+        <p style="font-size:2vw"><b> Part 3 stands </p></b>
             <ul>
                 <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
                 <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
