--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     body {
       background-image: url("Images/c15.png");
       background-repeat: repeat-x;
+      background-repeat: repeat-y;
     }
 
     </style>
