--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
     body {
       background-image: url("Images/c15.png");
-      background-repeat: repeat-x;
-      background-repeat: repeat-y;
+      background-attachment: fixed;
+      background-size: 100% 100%;
     }
 
     </style>
