--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     }
 
     header {
-      background-color: #666;
       padding: 30px;
       text-align: center;
       font-size: 35px;
@@ -76,9 +75,9 @@
   </head>
   <body>
     <header>
-  <h1 style="font-family:verdana">JoJo Stands</h1>
+  <img src="Images/jojo.gif" alt="Title"
 </header>
-    <h2 style="color:255, 255, 255">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
+    <h2 style="color: white">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
     <ul>
         <p style="font-size:2vw"><b> Part 3 stands </p></b>
