--- a/index.html
+++ b/index.html
@@ -9,61 +9,13 @@
       font-size: 35px;
       color: white;
     }
-
-
-    nav {
-      float: left;
-      width: 30%;
-      height: 300px;
-      background: #ccc;
-      padding: 20px;
-    }
-
-
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    article {
-      float: left;
-      padding: 1px;
-      width: 10%;
-      background-color: #f1f1f1;
-    }
-
-
-    section::after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-
-
-    footer {
-      background-color: #777;
-      padding: 10px;
-      text-align: center;
-      color: white;
-    }
-
-
-    @media (max-width: 600px) {
-      nav, article {
-        width: 100%;
-        height: auto;
-      }
-    }
-
     body {
       background-image: url("Images/c15.png");
     }
-
     </style>
     </head>
     <body>
-
-    <title>JoJo Bizzare Adventure: Stands</title>
+    <title>JoJo Bizzare Adventure: Stand Ability Wiki</title>
   </head>
   <body>
     <header>
@@ -72,14 +24,19 @@
     <h2 style="color: white">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
     <ul>
-        <p style="font-size:2vw"><b> Part 3 stands </p></b>
-            <ul>
-                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
-                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
-                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
-                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
-                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
-                <li style="font-size:1.5vw" style="color:255, 255, 255"><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
+        <h4 style="font-size:2vw"><b> Part 3 stands </h4></b>
+        <body>
+          <p style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</p>
+            <iframe src="testing.png" height="256" width="256" tutle="testing"></iframe>
+
+
+                <li style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
+                <li style="font-size:1.5vw" ><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
+                <li style="font-size:1.5vw" ><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
+                <li style="font-size:1.5vw" ><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
+                <li style="font-size:1.5vw" ><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
+                <li style="font-size:1.5vw" ><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
            </ul>
          </li>
+       </body>
     </artical>
