--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h4 style="font-size:2vw"><b> Part 3 stands </h4></b>
         <body>
           <p style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</p>
-            <iframe src="testing.png" height="256" width="256" tutle="testing"></iframe>
+            <iframe src="Images/testing.png" height="100" width="100" tutle="testing"></iframe>
 
 
                 <li style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
