--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8">
     <style>
     header {
-      padding: 30px;
       text-align: center;
-      font-size: 35px;
-      color: white;
     }
     body {
       background-image: url("Images/c15.png");
+    }
+    div {
+      width:320px;
+      padding: 10px;
+      border: 5px solid gray;
+      margin: 0;
     }
     </style>
     </head>
@@ -20,14 +23,14 @@
   <body>
     <header>
   <img src="Images/jojo.gif" alt="Title"
+  <img src="Images/StarPlatnium.png" width="300" height="300" alt="StarPlatnium">
 </header>
     <h2 style="color: white">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
     <ul>
         <h4 style="font-size:2vw"><b> Part 3 stands </h4></b>
         <body>
-          <p style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</p>
-            <iframe src="Images/testing.png" height="100" width="100" tutle="testing"></iframe>
+          <div style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</div>
 
 
                 <li style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
