--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <style>
     header {
       text-align: center;
+      font-size: 35px;
     }
     body {
       background-image: url("Images/c15.png");
     }
     div {
-      width:320px;
+      width:250px;
       padding: 10px;
       border: 5px solid gray;
       margin: 0;
@@ -23,7 +24,7 @@
   <body>
     <header>
   <img src="Images/jojo.gif" alt="Title"
-  <img src="Images/StarPlatnium.png" width="300" height="300" alt="StarPlatnium">
+  <img src="Images/StarPlatinum.png" width="300" height="300" alt="StarPlatnium">
 </header>
     <h2 style="color: white">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
