--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     header {
       text-align: center;
       font-size: 35px;
+      font-size: 35px;
     }
     body {
       background-image: url("Images/c15.png");
