--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     header {
       text-align: center;
       font-size: 35px;
-      font-size: 35px;
+      padding: 30px;
     }
     body {
       background-image: url("Images/c15.png");
@@ -25,7 +25,7 @@
   <body>
     <header>
   <img src="Images/jojo.gif" alt="Title"
-  <img src="Images/StarPlatinum.png" width="300" height="300" alt="StarPlatnium">
+  <img src="Images/StarPlatinum.png" alt="Image">
 </header>
     <h2 style="color: white">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
     <artical>
