--- a/index.html
+++ b/index.html
@@ -1,47 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <style>
-    header {
-      text-align: center;
-      font-size: 35px;
-      padding: 30px;
-    }
-    body {
-      background-image: url("Images/c15.png");
-    }
-    div {
-      width:250px;
-      padding: 10px;
-      border: 5px solid gray;
-      margin: 0;
-    }
-    </style>
-    </head>
-    <body>
-    <title>JoJo Bizzare Adventure: Stand Ability Wiki</title>
-  </head>
-  <body>
-    <header>
-  <img src="Images/jojo.gif" alt="Title"
-  <img src="Images/StarPlatinum.png" alt="Image">
-</header>
-    <h2 style="color: white">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare Adventure" Click below on the stand's name to view more about them </h2>
-    <artical>
-    <ul>
-        <h4 style="font-size:2vw"><b> Part 3 stands </h4></b>
-        <body>
-          <div style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</div>
+<html lang="en">
 
+<head>
+  <link rel="stlyesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 
-                <li style="font-size:1.5vw" ><a href="Part3stands\StarPlatnium.html" target="_blank">Star Platnium</li>
-                <li style="font-size:1.5vw" ><a href="Part3stands\SilverChariot.html" target="_blank">Silver Chariot</li>
-                <li style="font-size:1.5vw" ><a href="Part3stands\magiciansred.html" target="_blank">Magician's Red</li>
-                <li style="font-size:1.5vw" ><a href="Part3stands\hierophantgreen.html" target="_blank">Hierophant Green</li>
-                <li style="font-size:1.5vw" ><a href="Part3stands\HermitPurple.html" target="_blank">Hermit Purple</li>
-                <li style="font-size:1.5vw" ><a href="Part3stands\TheWorld.html" target="_blank">The World</li>
-           </ul>
-         </li>
-       </body>
-    </artical>
+<body>
+  <header>
+  <div>
+    <img src="Images/jojo.gif" alt="Title">
+    <img src="Images/StarPlatinum.png" alt="Image">
+    </div>
+  </header>
+  <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
+    Adventure" Click below on the stand's name to view more about them </h2>
+</body>
+
+</html>
