--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
-  <link rel="stlyesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JoO<title>
 </head>
+
 <body>
-  <div>
-    <img src="Images/jojo.gif" alt="Title">
-    <img src="Images/StarPlatinum.png" alt="Image">
+  <header class="title-container">
+    <div>
+      <img src="Images/jojo.gif" alt="Title">
+    </div>
+    <div>
+      <img src="Images/StarPlatinum.png" alt="Image">
     </div>
   </header>
   <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
