--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <img src="Images/StarPlatinum.png" alt="Image">
     </div>
   </header>
-  <h2>Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
+  <section>
+  <h2 class="txt-conatiner">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
     Adventure" Click below on the stand's name to view more about them </h2>
+  </section>
 </body>
 
 </html>
