--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jojo</title>
+  <title>JoJo</title>
 </head>
 
 <body>
@@ -18,10 +18,11 @@
       <img src="Images/StarPlatinum.png" alt="Image">
     </div>
   </header>
-  <section>
-  <h2 class="txt-conatiner">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
-    Adventure" Click below on the stand's name to view more about them </h2>
+  <section class="jojo-section">
+    <h2 class="text-container">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
+      Adventure" Click below on the stand's name to view more about them </h2>
   </section>
+
 </body>
 
 </html>
