--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
       <img src="Images/jojo.gif" alt="Title">
     </div>
-    <div>
+    <div class="title-image">
       <img src="Images/StarPlatinum.png" alt="Image">
     </div>
   </header>
