--- a/index.html
+++ b/index.html
@@ -22,7 +22,79 @@
     <h2 class="text-container">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
       Adventure" Click below on the stand's name to view more about them </h2>
   </section>
-
+  <section>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img src="Images/StarPlatinum.png alt="">
+      </div>
+      <div>
+        <h3>Star Platinum</h3>
+        <p>Jotaro Kujo</p>
+      </div>
+    </div>
 </body>
 
 </html>
