--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,7 @@
   <section>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="300px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -34,7 +34,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -43,7 +43,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -52,7 +52,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -61,7 +61,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -70,7 +70,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -79,7 +79,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <imgwidth="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -88,7 +88,7 @@
     </div>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png alt="">
+        <img width="120px" src="Images/StarPlatinum.png alt="">
       </div>
       <div>
         <h3>Star Platinum</h3>
