--- a/index.html
+++ b/index.html
@@ -25,76 +25,12 @@
   <section>
     <div>
       <div>
-        <img width="300px" src="Images/StarPlatinum.png alt="">
+        <img src="Images/StarPlatinum.png" alt="Image">
       </div>
       <div>
         <h3>Star Platinum</h3>
         <p>Jotaro Kujo</p>
       </div>
     </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <imgwidth="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png alt="">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-</body>
 
 </html>
