--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section>
     <div>
       <div>
-        <img src="Images/StarPlatinum.png" alt="Image">
+        <img width="120px" src="Images/StarPlatinum.png" alt="Image">
       </div>
       <div>
         <h3>Star Platinum</h3>
@@ -34,3 +34,29 @@
     </div>
 
 </html>
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap%27);
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    font-size: 62.5%;
+}
+
+.title-container{
+    text-align: center;
+}
+
+.txt-conatiner{
+   text-align: center;
+   font-weight: 400;
+   margin: 15px 30px 0px 30px;
+   font-size: ;
+}
+
+.tite-image img{
+  border: 2px solid black;
+  border-radius: 10px;
+}
