--- a/index.html
+++ b/index.html
@@ -32,5 +32,24 @@
         <p>Jotaro Kujo</p>
       </div>
     </div>
+    <div>
+      <div>
+        <img width="120px" src="Images/TheWorld.png" alt="Image">
+      </div>
+      <div>
+        <h3>The World</h3>
+        <p>DIO</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img width="120px" src="Images/SilverChariot.png" alt="Image">
+      </div>
+      <div>
+        <h3>Silver Chariot</h3>
+        <p>Jean Pierre Polnareff</p>
+      </div>
+    </div>
+
 
 </html>
