--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p>Jotaro Kujo</p>
       </div>
     </div>
+
     <div>
       <div>
         <img width="120px" src="Images/TheWorld.png" alt="Image">
@@ -50,6 +51,32 @@
         <p>Jean Pierre Polnareff</p>
       </div>
     </div>
-
+    <div>
+      <div>
+        <img width="120px" src="Images/MagiciansRed.png" alt="Image">
+      </div>
+      <div>
+        <h3>Magician's Red</h3>
+        <p>Muhammad Avdol</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img width="120px" src="Images/HierophantGreen.jpg" alt="Image">
+      </div>
+      <div>
+        <h3>Hierophant Green</h3>
+        <p>Noriaki Kakyoin</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <img width="120px" src="Images/HermitPurple.png" alt="Image">
+      </div>
+      <div>
+        <h3>Hermit Purple</h3>
+        <p>Joseph Joestar</p>
+      </div>
+    </div>
 
 </html>
