--- a/index.html
+++ b/index.html
@@ -2,81 +2,39 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JoJo</title>
+  <title>jojo sex</title>
 </head>
 
 <body>
-  <header class="title-container">
-    <div>
-      <img src="Images/jojo.gif" alt="Title">
-    </div>
-    <div class="title-image">
-      <img src="Images/StarPlatinum.png" alt="Image">
+  <header class="ctn-hero-nav">
+    <nav class="navbar">
+      <div class="container-logo">
+        <img src="./images/jojo-logo.png" alt="">
+      </div>
+      <ul class="nav-bar-ctn">
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">Characters</a>
+        </li>
+        <li>
+          <a href="">Info</a>
+        </li>
+        <li>
+          <a href="">More</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="hero-section">
+      <h2 class="text-container">The Best Wiki about Jojo Characters</h2>
+      <button>Read More</button>
     </div>
   </header>
-  <section class="jojo-section">
-    <h2 class="text-container">Hello! This will be a small wiki about stands from the popular show, "JoJo's Bizzare
-      Adventure" Click below on the stand's name to view more about them </h2>
-  </section>
-  <section>
-    <div>
-      <div>
-        <img width="120px" src="Images/StarPlatinum.png" alt="Image">
-      </div>
-      <div>
-        <h3>Star Platinum</h3>
-        <p>Jotaro Kujo</p>
-      </div>
-    </div>
-
-    <div>
-      <div>
-        <img width="120px" src="Images/TheWorld.png" alt="Image">
-      </div>
-      <div>
-        <h3>The World</h3>
-        <p>DIO</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/SilverChariot.png" alt="Image">
-      </div>
-      <div>
-        <h3>Silver Chariot</h3>
-        <p>Jean Pierre Polnareff</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/MagiciansRed.png" alt="Image">
-      </div>
-      <div>
-        <h3>Magician's Red</h3>
-        <p>Muhammad Avdol</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/HierophantGreen.jpg" alt="Image">
-      </div>
-      <div>
-        <h3>Hierophant Green</h3>
-        <p>Noriaki Kakyoin</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <img width="120px" src="Images/HermitPurple.png" alt="Image">
-      </div>
-      <div>
-        <h3>Hermit Purple</h3>
-        <p>Joseph Joestar</p>
-      </div>
-    </div>
-
-</html>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap%27);
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap%27);
+@import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap%27);
