--- a/index.html
+++ b/index.html
@@ -34,46 +34,46 @@
       </ul>
     </nav>
     <div class="hero-section">
-      <h2 class="text-container">The Best Wiki about Jojo Characters</h2>
+      <h2 class="text-container">JoJo Bizzare Adventure: Stand Wiki</h2>
       <button>Read More</button>
     </div>
   </header>
   <section class="char-sec">
     <div class="title">
-      <h2>Our<span class="news-title">Last News</span></h2>
+      <h2>Stand<span class="news-title">Abilitys</span></h2>
     </div>
     <div class="ctn-p-news">
       <div class="new">
         <div class="new-image char-1">
           <div class="top-but">
-            <p>New</p>
+            <p>Anime</p>
           </div>
         </div>
         <div class="new-text">
-          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+          <h3><a href="stands/StarPlatnium.html">Star Platinum</a></h3>
+          <p>Jotaro Kujo</p>
         </div>
       </div>
       <div class="new">
         <div class="new-image char-2">
           <div class="top-but">
-            <p>New</p>
+            <p>Anime</p>
           </div>
         </div>
         <div class="new-text">
-          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+          <h3><a href="childpages/template.html">The World</h3>
+          <p>DIO</p>
         </div>
       </div>
       <div class="new">
         <div class="new-image char-3">
           <div class="top-but">
-            <p>New</p>
+            <p>Anime</p>
           </div>
         </div>
         <div class="new-text">
-          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+          <h3><a href="childpages/template.html">Silver Chariot</h3>
+          <p>Jean Pierre Polnareff</p>
         </div>
       </div>
     </div>
@@ -81,41 +81,41 @@
       <div class="new">
         <div class="new-image char-4">
           <div class="top-but">
-            <p>New</p>
+            <p>Anime</p>
           </div>
         </div>
         <div class="new-text">
-          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+          <h3><a href="childpages/template.html">Magician's Red</h3>
+          <p>Muhammad Avdol</p>
         </div>
       </div>
       <div class="new">
         <div class="new-image char-5">
           <div class="top-but">
-            <p>New</p>
+            <p>Anime</p>
           </div>
         </div>
         <div class="new-text">
-          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+          <h3><a href="childpages/template.html">Hermit Purple</a></h3>
+          <p>Jospeh Joestar</p>
         </div>
       </div>
       <div class="new">
         <div class="new-image char-6">
           <div class="top-but">
-            <p>New</p>
+            <p>Anime</p>
           </div>
         </div>
         <div class="new-text">
-          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+          <h3><a href="childpages/template.html">Hierophant Green</a></h3>
+          <p>Noriaki kakyoin</p>
         </div>
       </div>
     </div>
   </section>
   <section>
     <div class="title">
-      <h2>Trending<span class="news-title">Now</span></h2>
+      <h2>Manga<span class="news-title">Version</span></h2>
     </div>
     <div class="ctn-p-news2">
       <div class="new2">
@@ -160,30 +160,6 @@
           </div>
         </div>
       </div>
-      <div class="new2">
-        <div class="new-image2 char-6">
-          <div class="top-but">
-            <p>Manga</p>
-          </div>
-        </div>
-      </div>
-      <div class="new2">
-        <div class="new-image2 char-6">
-          <div class="top-but">
-            <p>Manga</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="section-image">
-    <div class="img-sect">
-      <div class="img-sect-text">
-        <h2>Anime of the Year</h2>
-        <p>28/02/2022</p>
-        <button>Read More</button>
-      </div>
-    </div>
   </section>
   <footer class="footer-pagina">
     <div class="icono">
