--- a/stands/StarPlatnium.html
+++ b/stands/StarPlatnium.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
-  <html lang="en" dir="ltr">
+<html lang="en" dir="ltr">
 
-  <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="./css/style.css">
-    <meta charset="utf-8">
-    <title>Star Platnium</title>
-  </head>
+  <meta charset="utf-8">
+  <title>Star Platnium</title>
+</head>
+
+
+<body>
+
+  <body class="ctn-hero-nav">
+    <nav class="navbar">
+      <div class="container-logo">
+        <img src="../Images/jojo-logo.png" alt="">
+      </div>
+      <ul class="nav-bar-ctn">
+        <li>
+          <a href="../index.html">Home</a>
+        </li>
+        <li>
+          <a href="">Characters</a>
+        </li>
+        <li>
+          <a href="">Info</a>
+        </li>
+        <li>
+          <a href="">More</a>
+        </li>
+      </ul>
+    </nav>
+  </body>
 
   <body>
-    <header class="ctn-hero-nav">
-      <nav class="navbar">
-        <div class="container-logo">
-          <img src="./images/jojo-logo.png" alt="">
-        </div>
-        <ul class="nav-bar-ctn">
-          <li>
-            <a href="../index.html">Home</a>
-          </li>
-          <li>
-            <a href="">Characters</a>
-          </li>
-          <li>
-            <a href="">Info</a>
-          </li>
-          <li>
-            <a href="">More</a>
-          </li>
-        </ul>
-      </nav>
+    <div class="StarPlatnium">
+      <img src="..Images/StarPlatnium.png" alt="">
+    </div>
+  </body>
 
-      <body>
-        Star Platnium
-      </body>
 
-  </html>
+</html>
