--- a/stands/StarPlatnium.html
+++ b/stands/StarPlatnium.html
@@ -36,10 +36,11 @@
   </body>
 
   <body>
-    <div class="StarPlatnium">
-      <img src="..Images/StarPlatnium.png" alt="">
+    <div>
+      <class div="new-image StarPlatnium">
+        <img src="../Images/StarPlatinumS.png">
     </div>
+    </class>
   </body>
-
 
 </html>
