--- a/stands/StarPlatnium.html
+++ b/stands/StarPlatnium.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+< lang="en" dir="ltr">
 
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -11,36 +11,38 @@
 </head>
 
 
-<body>
 
-  <body class="ctn-hero-nav">
-    <nav class="navbar">
-      <div class="container-logo">
-        <img src="../Images/jojo-logo.png" alt="">
-      </div>
-      <ul class="nav-bar-ctn">
-        <li>
-          <a href="../index.html">Home</a>
-        </li>
-        <li>
-          <a href="">Characters</a>
-        </li>
-        <li>
-          <a href="">Info</a>
-        </li>
-        <li>
-          <a href="">More</a>
-        </li>
-      </ul>
-    </nav>
-  </body>
-
-  <body>
-    <div>
-      <class div="new-image StarPlatnium">
-        <img src="../Images/StarPlatinumS.png">
+<div class="ctn-hero-nav">
+  <nav class="navbar">
+    <div class="container-logo">
+      <img src="../Images/jojo-logo.png" alt="">
     </div>
-    </class>
-  </body>
+    <ul class="nav-bar-ctn">
+      <li>
+        <a href="../index.html">Home</a>
+      </li>
+      <li>
+        <a href="">Characters</a>
+      </li>
+      <li>
+        <a href="">Info</a>
+      </li>
+      <li>
+        <a href="">More</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="hero-section">
+    <h2>Star Platnium</h2>
+  </div>
+    <div class="body-section">
+</div>
+</div>
+<div>
+  <div class="content">
+<h2>Sex Part 1</h2>
+<p>OH NO MR.SEX</p>
+  </div>
+</div>
 
 </html>
