--- a/stands/StarPlatnium.html
+++ b/stands/StarPlatnium.html
@@ -9,8 +9,6 @@
     <meta charset="utf-8">
     <title>Star Platnium</title>
   </head>
-
-
   <html>
 
   <body class="hero-background">
@@ -33,35 +31,49 @@
         </li>
       </ul>
     </nav>
-    <div class="gallery">
-      <img src="../Images/StarPlatinumS.png" alt="Cinque Terre" width="600" height="400">
-      </a>
-      <div class="desc">Stand: Star Platnium</div>
-      <div class="desc">User: Jotaro Kujo</div>
-      <div class="desc">Type: Close Range
-        <div class="desc">Stand Cry:"ORA ORA ORA"</div>
-        <audio controls>
-          <source src="../Media/SP.mp3" type="audio/ogg">
+    <div class="all-ctn">
+      <div class="herotitle">
+        <div class="center">
+         <p style="width: 1000px;"><b>Star Platnium is a close-ranged stand with abnormal strength, speed, precision, and accuracy. With its extordinay physical power and Jotaro's fighting spirit,
+           Star Platnium is one of the strongest stands in the serires. Its also similar to the stand, "The World"</p></b>
+           <hr class="rounded">
+          <h2><u>appearance</h2></u>
+          <p>Star Platnium appearance looks more humanoid than the others, a buff, tall, similar to their user, Jotaro
+            Kujo. Its skin has various colors throughtout the body with a hue between purple, blue, green, and a tad of
+            gold</p>
+          <p>It has long, flowing black hair with a headband accessory with a gem in the middle. It also wears a dark
+            purple cap on its chin, a short circual scarf, shoulder pads with a sirl design, gloves with studs on the
+            back
+            of the hand,</p>
+          <p>knee/elbow guards, knne length boots, and a loincloth.</p>
+          <hr class="rounded">
+          <h2><u>Abilitys</h2></u>
+          <h4 div class="herotitle">ORA Barrage</h4>
+          <p>Star Platnium does a barrage of fast punches/kicks inflicting heavy damage to the opponent.</p>
+            <img src="/Images/SPbend.gif" alt="Smiley face" style="float:center;width:300px;height:200px;">
+          <h4 div class="herotitle">Star Finger</h4>
+          <p>Star platnium extends his middle and index finger to stab their oppenet from afar. This ability is only used when the user is immobilized</p>
+            <img src="/Images/Starfinger.gif" alt="Smiley face" style="float:center;width:px;height:200px;">
+          <h4 div class="herotitle">Star Platnium: The World</h4>
+          <p>In his prime (Part 4) Star Platnium could stop time for 5 secounds. In part 5 he could only stop time for 0.5 - 2 secounds.
+            At the start of part 6 he could time stop for 2 secounds but at the end it extended to 5 secounds.</p>
+          <p>Similar to The Worlds time stop, Jotaro Kujo can freely move and the objects he touches.</p>
+          <img src="/Images/SPtime.gif" alt="Smiley face" style="float:center;width:px;height:200px;">
+          <hr class="rounded">
+        </div>
+      </div>
+      <div class="gallery">
+        <img src="../Images/StarPlatinumS.png" alt="">                                                                                                        >
+        </a>
+        <div class="desc"><b>Stand:</b> Star Platnium</div>
+        <div class="desc"><b>User:</b> Jotaro Kujo</div>
+        <div class="desc"><b>Type:</b> Close Range
+          <div class="desc"><b>Stand Cry:</b>"ORA ORA ORA"</div>
+          <audio controls>
+            <source src="../Media/SP.mp3" type="audio/ogg">
+        </div>
       </div>
     </div>
-    <div class="herotitle">
-        <div class="center">
-        <h2>Apperence</h2>
-        <p>Star Platnium apperences looks more humanoid than the others, a buff, tall, similar to their user, Jotaro
-          Kujo. Its skin has various colors throughtout the body with a hue between purple, blue, green, and a tad of
-          gold</p>
-        <p>It has long, flowing black hair with a headband accessory with a gem in the middle. It also wears a dark
-          purple cap on its chin, a short circual scarf, shoulder pads with a sirl design, gloves with studs on the back
-          of the hand,</p>
-        <p>knee/elbow guards, knne length boots, and a loincloth.</p>
-        <hr class="rounded">
-          <h2>Abilitys</h2>
-          <p>Star Platnium is a close range stand only being able to attack from 2 meters from their user (Jotrao Kujo)
-            But
-            posseses super human strength, great percision, and speed. </p>
-          <h3>Strength</h3>
-          <p>Star Platnium is able to bend steel bars with its bare hands with minium effort and desotry diamon hard
-            structures in a
-            matter of secounds</p>
+  </body>
 
   </html>
