--- a/stands/TheWorld.html
+++ b/stands/TheWorld.html
@@ -1,10 +1,76 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<lang="en" dir="ltr">
+
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="utf-8">
-    <title>Child Page Template</title>
+    <title>The World</title>
   </head>
-  <body>
-    The World
+  <html>
+
+  <body class="hero-background">
+    <nav class="navbar">
+      <div class="container-logo">
+        <img src="../Images/jojo-logo.png" alt="">
+      </div>
+      <ul class="nav-bar-ctn">
+        <li>
+          <a href="../index.html">Home</a>
+        </li>
+        <li>
+          <a href="">Characters</a>
+        </li>
+        <li>
+          <a href="">Info</a>
+        </li>
+        <li>
+          <a href="">More</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="all-ctn">
+      <div class="herotitle">
+        <div class="center">
+          <p style="width: 1000px;"><b>The World is a close-ranged stand similar to "Star Platnium". It possess the same physical strength, speed, precision, and accuracy as Star Platnium. 
+            But with its time stopping power, it is truly a stand to be feared.</p></b>
+            <hr class="rounded">
+          <h2><u>Appearance</h2></u>
+          <p>The World is a well-built humanoid figure resembling DIO himself and his clothes.</p>
+          <p>It has a yellow slanted headwear covering its face with a heart shaped cap on its chin. Behind the stand, it has 2 diving clylinders connected to its mask, it has ridged straps
+            over its shoulder from the front and back. The world wears fingerless gloves with beads on each finger except for the thumb. behind the hand is a clock face symbolizing
+          its power to stop time.</p>
+          <hr class="rounded">
+          <h2><u>Abilitys</h2></u>
+          <h4 div class="herotitle">Stop Time</h4>
+          <p>This may be only one ability but it is also very powerful.</p>
+          <p>The World is cable of stopping time for only 5 secounds due to his weakened state but after sucking Joestar blood his Time Stop increases to 9 secounds</p>
+          <p>During stop time, DIO is able to move freely including the object he touches and throws. Another feature of time stop is being able to levitate. Since they're is not
+            gravity forces pulling him down, DIO can freely move anywhere as he wishes.</p>
+          <p>With this powerful and unstoppable power DIO can strike defenseless enemies, easily doge attacks, and have an escape plan whenever he needs to.</p>
+            <img src="/Images/TheWorldTimestop.gif" alt="" style="float:center;width:350px;height:200px;">
+          <h4 div class="herotitle">MUDA Barrage</h4>
+          <p>Similar to Star Platnium, The World unleashes a fast barrage of devastating punches/kicks that can severely injury their opponent. The Worlds physical strength and speed 
+            is quite similar, in fact even slighty better, though it is unconfirmed.</p>
+            <img src="/Images/TWbarrage.gif" alt="" style="float:center;width:px;height:200px;">
+          <img src="/Images/TWkicks.gif" alt="" style="float:center;width:px;height:200px;">
+          <hr class="rounded">
+        </div>
+      </div>
+      <div class="gallery">
+        <img src="../Images/TheWorld2.png" alt="">                                                                                                      >
+        </a>
+        <div class="desc"><b>Stand:</b> The World</div>
+        <div class="desc"><b>User:</b> DIO (Dio Brando)</div>
+        <div class="desc"><b>Type:</b> Close Range
+          <div class="desc"><b>Stand Cry:</b> MUDA MUDA MUDA</div>
+          <audio controls>
+            <source src="../Media/TW.mp3" type="audio/ogg">
+        </div>
+      </div>
+    </div>
   </body>
-</html>
+
+  </html>
