--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="Images/Jojo-icon.png">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +62,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="childpages/template.html">The World</h3>
+          <h3><a href="stands/TheWorld.html">The World</h3>
           <p>DIO</p>
         </div>
       </div>
@@ -72,7 +73,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="childpages/template.html">Silver Chariot</h3>
+          <h3><a href="stands/SilverChariot.html">Silver Chariot</h3>
           <p>Jean Pierre Polnareff</p>
         </div>
       </div>
