--- a/stands/SilverChariot.html
+++ b/stands/SilverChariot.html
@@ -1,10 +1,73 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<lang="en" dir="ltr">
+
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="utf-8">
-    <title>Child Page Template</title>
+    <title>Silver Chariot</title>
   </head>
-  <body>
-    Silver Chariot
+  <html>
+
+  <body class="hero-background">
+    <nav class="navbar">
+      <div class="container-logo">
+        <img src="../Images/jojo-logo.png" alt="">
+      </div>
+      <ul class="nav-bar-ctn">
+        <li>
+          <a href="../index.html">Home</a>
+        </li>
+        <li>
+          <a href="">Characters</a>
+        </li>
+        <li>
+          <a href="">Info</a>
+        </li>
+        <li>
+          <a href="">More</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="all-ctn">
+      <div class="herotitle">
+        <div class="center">
+          <p style="width: 1000px;"><b>Silver Chariot is a Stand of Jean Pierre Polnareff, equipped with armor and weilds a rapier as its weapon. A deadly foe to battle in close range due to its speed and precision even being able to slice 
+            a bullet.</p></b>
+            <hr class="rounded">
+          <h2><u>Appearance</h2></u>
+          <p>Silver Chariot takes a thin robotic humanoid form in steel medieval armour, equipped with a cup-hilted rapier. It has thick, spikey shoulder pads and a helmet with a 
+            jewel embedded in the forehead. After the fight with Diavolo, Silver Chariot loses it legs and right forearm, but are replaced with metal spike-like appendages.</p>
+          <hr class="rounded">
+          <h2><u>Abilitys</h2></u>
+          <h4 div class="herotitle">Hora Rush</h4>
+          <p>With incredible speed and precision, Silver Chariot can incapacitate his opponents or slice objects with ease</p>
+            <img src="/Images/SCrush.gif" alt="" style="float:center;width:350px;height:200px;">
+          <h4 div class="herotitle">Armor Removal</h4>
+          <p>Silver Chariot simply sheds off its armor for increased speed, on the downside it is more vulnerable to attacks that can cause fatal damage.</p>
+            <img src="/Images/SCarmor.gif" alt="" style="float:center;width:px;height:200px;">
+          <h4 div class="herotitle">Sword Launch</h4>
+          <p>This ability launches his sword with great force and precision enough to pierce a human body. It can ricochet off walls or object as well. After launch Silver Chariot 
+            would have to retrieve the weapon before using it again.
+          </p>
+            <img src="/Images/SClaunch.gif" alt="" style="float:center;width:px;height:200px;">
+          <hr class="rounded">
+        </div>
+      </div>
+      <div class="gallery">
+        <img src="../Images/SilverChariot2.png" alt="">                                                                                                      >
+        </a>
+        <div class="desc"><b>Stand:</b> Silver Chariot</div>
+        <div class="desc"><b>User:</b> Jean Pierre Polnareff</div>
+        <div class="desc"><b>Type:</b> Close Range
+          <div class="desc"><b>Stand Cry:</b> HORA HORA HORA</div>
+          <audio controls>
+            <source src="../Media/SC.mp3" type="audio/ogg">
+        </div>
+      </div>
+    </div>
   </body>
-</html>
+
+  </html>
